<resources>

    <string name="startServiceButton">Start service</string>
    <string name="stopServiceButton">Stop service</string>
    <string name="installedPackages">View installed applications</string>

    <string name="app_name">Geolock</string>
    <string name="setLock">Change PIN</string>
    <string name="removeLock">Remove lock</string>
    <string name="action_settings">Settings</string>
    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose</string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">CANCEL</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="activity_appcompat_message">I am a PinCompatActivity!</string>
    <string name="checkPin">Check PIN</string>

    <string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button2_small_text" translatable="false">ABC</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="button3_small_text" translatable="false">DEF</string>
    <string name="button4_large_text" translatable="false">4</string>
    <string name="button4_small_text" translatable="false">GHI</string>
    <string name="button5_large_text" translatable="false">5</string>
    <string name="button5_small_text" translatable="false">JKL</string>
    <string name="button6_large_text" translatable="false">6</string>
    <string name="button6_small_text" translatable="false">MNO</string>
    <string name="button7_large_text" translatable="false">7</string>
    <string name="button7_small_text" translatable="false">PQRS</string>
    <string name="button8_large_text" translatable="false">8</string>
    <string name="button8_small_text" translatable="false">TUV</string>
    <string name="button9_large_text" translatable="false">9</string>
    <string name="button9_small_text" translatable="false">WXYZ</string>
    <string name="button11_large_text" translatable="false">0</string>

    <string name="pin_code_forgot_text">Forgot?</string>
    <string name="pin_code_step_disable">Disable %d-digit Pincode</string>
    <string name="pin_code_step_create">Create a %d-digit Pincode</string>
    <string name="pin_code_step_change">Enter your current %d-digit Pincode</string>
    <string name="pin_code_step_unlock">Enter your %d-digit Pincode</string>
    <string name="pin_code_step_enable_confirm">Confirm your %d-digit Pincode</string>

    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>

    <string name="geofence_locations_select_header">Areas</string>
    <string name="geofence_locations_create_new">Create New</string>
    <string name="geofence_name">Name:</string>
    <string name="geofence_colour">Colour:</string>
    <string name="geofence_select_location">Select location:</string>
    <string name="geofence_new_radius">Radius:</string>
    <string name="geofence_new_create_submit">Create</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>




</resources>
